tests/lean/sort.lean.expected.out
sort.lean:1:7: error: invalid universe `Sort`, use `Sort 0` or `Prop` instead
Prop : Type
Prop : Type
Prop : Type
