tests/lean/sort.lean
#check Sort
#check Sort 0
#check Prop
